--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="keywords"
     content="secure,password generator,pwa,random password,generate password,random,secure password,cookieless">
   <meta name="author" content="Samuel">
-  <link rel="stylesheet" type="text/css" href="css/style.css?v=1.0">
+  <link rel="stylesheet" type="text/css" href="css/style.css?v=1.1">
   <link rel="manifest" href="assets/pwa/manifest.json">
   <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
@@ -46,7 +46,10 @@
       <div class="checkbox-row"><input type="checkbox" id="lowercases" checked><label for="lowercases">Include lowercase
           letters</label>
       </div>
-      <div class="checkbox-row"><input type="checkbox" id="symbols" checked><label for="symbols">Include symbols</label>
+      <div class="checkbox-row"><input type="checkbox" id="symbols" checked><label for="symbols">Include
+          symbols:</label>
+        <input type="text" id="customSymbols" class="custom-symbols" placeholder="!?#$%..."
+          value="!?#$€:;%&amp;@()&quot;[]{}§.,*+-_=\&#39;^~&lt;&gt;|">
       </div>
       <div class="checkbox-row"><input type="checkbox" id="startsWithLetter" checked><label
           for="startsWithLetter">Always start with a
@@ -74,7 +77,7 @@
       <div id="copyStatus" aria-live="polite" class="visually-hidden"></div>
     </div>
     <footer>
-      <p>&copy; <span id="year"></span> Sam's Secure Password Generator, v1.0 20250630
+      <p>&copy; <span id="year"></span> Sam's Secure Password Generator, v1.1 20250724
       </p>
       <p>Found a bug? Please <a href="https://github.com/samuelT2/secure-password-generator/issues/new/choose"
           target="_blank" rel="noopener noreferrer">report
@@ -84,8 +87,8 @@
           rel="noopener noreferrer">Github</a></p>
     </footer>
   </div>
-  <script src="js/sspg.js?v=1.0"></script>
-  <script src="register-sw.js?v=1.0"></script>
+  <script src="js/sspg.js?v=1.1"></script>
+  <script src="register-sw.js?v=1.1"></script>
 </body>
 
 </html>
