--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="keywords"
     content="secure,password generator,pwa,random password,generate password,random,secure password,cookieless">
   <meta name="author" content="Samuel">
-  <link rel="stylesheet" type="text/css" href="css/style.css?v=1.2.1">
+  <link rel="stylesheet" type="text/css" href="css/style.css?v=1.2.2">
   <link rel="manifest" href="assets/pwa/manifest.json">
   <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
@@ -49,7 +49,7 @@
       <div class="checkbox-row"><input type="checkbox" id="symbols" checked><label for="symbols">Include
           symbols:</label>
         <input type="text" id="customSymbols" class="custom-symbols" placeholder="!?#$%..."
-          value="!?#$€:;%&amp;@()&quot;[]{}§.,*+-_=\&#39;^~&lt;&gt;|/">
+          value="!?#$:;%&amp;@()[]{}&lt;&gt;.,*+-_=|/">
       </div>
       <div class="checkbox-row"><input type="checkbox" id="startsWithLetter" checked><label
           for="startsWithLetter">Always start with a
@@ -77,7 +77,7 @@
       <div id="copyStatus" aria-live="polite" class="visually-hidden"></div>
     </div>
     <footer>
-      <p>&copy; <span id="year"></span> Sam's Secure Password Generator, v1.2.1 20250728
+      <p>&copy; <span id="year"></span> Sam's Secure Password Generator, v1.2.2 20250728
       </p>
       <p>Found a bug? Please <a href="https://github.com/samuelT2/secure-password-generator/issues/new/choose"
           target="_blank" rel="noopener noreferrer">report
@@ -87,8 +87,8 @@
           rel="noopener noreferrer">Github</a></p>
     </footer>
   </div>
-  <script src="js/sspg.js?v=1.2.1"></script>
-  <script src="register-sw.js?v=1.2.1"></script>
+  <script src="js/sspg.js?v=1.2.2"></script>
+  <script src="register-sw.js?v=1.2.2"></script>
 </body>
 
 </html>
